# f-rep-voxel-rendering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tmp.txt
cuda/: CMakeLists.txt
cuda/cuda profiles/: eighth profile.ncu-rep  fifth profile.ncu-rep  first profile.ncu-rep  fourth profile.ncu-rep  second profile.ncu-rep  seventh profile.ncu-rep  sixth profile.ncu-rep  third profile.ncu-rep
cuda/cuda profiles/F-rep voxels profiles/: F-rep voxels profiles.ncu-proj
cuda/include/: cuda_call.h
cuda/include/engine/: engine.h
cuda/src/: main.cpp  main.cu  matrix_sum.cu  vector_add.cu
cuda/src/engine/: engine.cpp
include/: application.h  shapes.h
include/compute/: context.h  device.h  platform.h  program.h
include/csg/: expression.h  lib.h  simplifier.h  tape.h
include/engine/: camera.h  cleanup_queue.h  csg_expression.h  csg_tape.h  cube_grid.h  engine.h  engine_base.h  enginebase.h  frame.h  input_manager.h  raytracer.h  render_target.h  renderer.h  scene_builder.h  swapchain.h  vk_check.h  vk_engine.h  vk_init.h  voxel_storage.h  voxelizer.h
include/utils/: dot_graph.h  function_queue.h  num_utils.h  running_average.h  string_utils.h
include/vk_wrapper/: buffer.h  descriptor.h  device.h  image.h  initializers.h  pipeline_builder.h  shader.h  spec_constants.h  vk_check.h
shaders/: affine.comp  dda.comp  dda.comp.spv  node.comp  tape.comp  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv  utils.comp
shaders/raycaster/: inputs.comp  main.comp  main.comp.spv  tape.comp
shaders/raycasting/: inputs.comp  inputs.comp.incl  inputs.comp_header  main.comp  main.comp.spv  utils.comp  utils.comp.incl  utils.comp_header
shaders/raytracer/: inputs.comp  main.comp  main.comp.pp
shaders/renderer/: triangle.frag  triangle.frag.pp  triangle.frag.spv  triangle.vert  triangle.vert.pp
shaders/rendering/: triangle.frag.spv
shaders/tape/: affine.comp  gradient.comp  interval.comp  point.comp  shorten.comp  tape.comp
shaders/voxelizer/: first_stage.comp  inputs.comp  main.comp  main.comp.pp  main.comp.spv  second_stage.comp
src/: application.cpp  main.cpp  shapes.cpp
src/compute/: context.cpp  device.cpp  program.cpp
src/csg/: expression.cpp  lib.cpp  simplifier.cpp  tape.cpp
src/engine/: camera.cpp  csg_expression.cpp  csg_tape.cpp  engine.cpp  engine_base.cpp  enginebase.cpp  frame.cpp  raytracer.cpp  render_target.cpp  renderer.cpp  scene_builder.cpp  swapchain.cpp  timer.cpp  vk_engine.cpp  vk_init.cpp  voxelizer.cpp
src/utils/: dot_graph.cpp  string_utils.cpp  thread_pool.cpp
src/vk_wrapper/: buffer.cpp  descriptor_allocator.cpp  descriptor_builder.cpp  descriptor_layout_cache.cpp  device.cpp  image.cpp  initializers.cpp  pipeline_builder.cpp  shader.cpp  vma_implementation.cpp
vulkan/: CMakeLists.txt  README.md
vulkan/include/: application.h  shapes.h
vulkan/include/csg/: expression.h  simplifier.h
vulkan/include/engine/: camera.h  raytracer.h  voxel_storage.h
vulkan/include/utils/: dot_graph.h  thread_pool.h
vulkan/include/vk_wrapper/: buffer.h  descriptor.h  device.h  image.h  pipeline_builder.h  swapchain.h  vk_check.h
vulkan/shaders/: random.comp  utils.comp
vulkan/shaders/raytracer/: inputs.comp  main.comp  main.comp.pp
vulkan/shaders/renderer/: triangle.frag
vulkan/shaders/tape/: gradient.comp  interval.comp  point.comp  shorten.comp
vulkan/shaders/voxelizer/: inputs.comp  main.comp  main.comp.pp
vulkan/src/: main.cpp  shapes.cpp
vulkan/src/csg/: simplifier.cpp
vulkan/src/engine/: engine_base.cpp  input_manager.cpp  raytracer.cpp  render_target.cpp  renderer.cpp  scene_builder.cpp  voxelizer.cpp
vulkan/src/utils/: dot_graph.cpp
vulkan/src/vk_wrapper/: buffer.cpp  descriptor_allocator.cpp  image.cpp  initializers.cpp  swapchain.cpp
